public partial class Constants
{
	public class Enemy
	{
		public const string Tag = "Enemy";
		public const string ProjectileTag = "Projectile";
		public const string AttackTriggerTag = "AttackTrigger";

		public class Animations
		{
			public const string Horizontal = "Horizontal";
			public const string Vertical = "Vertical";
			public const string IsMoving = "IsMoving";
			public const string Attack = "Attack";
			public const string Hurt = "Hurt";

		}
	}

	public class EnvironmentHazard
	{
		public const string Tag = "EnvironmentHazard";
	}
}